# llm-estimate

./: .gitignore  README.md  README_cn.md  llm_estimate.py  project_structure.md  pyproject.toml  requirements.txt  setup.py  test_accelerator_refactor.py
docs/examples/: basic_usage.py
llm_estimate/: __init__.py  main.py
llm_estimate/cli/: __init__.py  __main__.py  commands.py
llm_estimate/config/: __init__.py  settings.py
llm_estimate/estimator/: __init__.py  base.py  op_level_estimator.py
llm_estimate/hardware/: __init__.py  accelerator.py  base.py
llm_estimate/models/: __init__.py  base.py  configs.py  deepseek.py  llama.py  qwen.py  qwen3_moe.py  registry.py
llm_estimate/utils/: __init__.py  formatters.py
tests/: __init__.py  conftest.py
tests/test_models/: README.md  test_llama_corrections.py
